--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="30">
         <td>
-            <img src="https://scontent.fcjb2-1.fna.fbcdn.net/v/t1.0-9/120097169_450578132565941_7932128322930003255_o.jpg?_nc_cat=105&ccb=2&_nc_sid=09cbfe&_nc_ohc=oKCzlNvDwx4AX-AT-Ce&_nc_ht=scontent.fcjb2-1.fna&oh=853283f33851d98ed6ce613b3edfc281&oe=5FC95AFF" alt="Joe Felix image" width="400px">
+            <img src="#" alt="Joe Felix image" width="400px">
         </td>
         <td>
             <h1>Joe Felix</h1>
